--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "cloud-events",
+  "name": "@isksz/cloud-events",
   "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha test/**/*.js"
+    "test": "cross-env NODE_ENV=test mocha test/**/*.js",
+    "test-watch": "cross-env NODE_ENV=test mocha test/**/*.js --watch"
   },
   "repository": {
     "type": "git",
@@ -21,7 +22,9 @@
   "homepage": "https://github.com/iskandersierra/cloud-events#readme",
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "except": "^0.1.3",
     "mocha": "^5.2.0",
+    "only": "0.0.2",
     "should": "^13.2.1"
   },
   "dependencies": {
